--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,6 +5,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  /* min-width: 1366px; */
 }
 .el-breadcrumb {
   margin-bottom: 10px;
@@ -20,3 +21,5 @@ body,
 .el-pagination {
   margin-top: 15px;
 }
+
+
